Fixed contrast error, and links error

--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -42,8 +42,7 @@
 
       &.active,
       &:hover {
-        color: rgba(36, 147, 187, 1);
-        text-shadow: 0px 0px 3rem #d1d1d1;
+        color: #d1d1d1;
         transition: color 300ms;
       }
     }
