--- a/styles/main.css
+++ b/styles/main.css
@@ -28,8 +28,7 @@
     text-decoration: none;
     font-weight: 700; }
     .header .nav .link.active, .header .nav .link:hover {
-      color: #2493bb;
-      text-shadow: 0px 0px 3rem #d1d1d1;
+      color: #d1d1d1;
       transition: color 300ms; }
 
 .s-home {
